--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,3 +3,18 @@
 #data {
     overflow: scroll;
 }
+
+#charts {
+    max-height: 650px;
+    overflow: scroll;
+}
+
+.chart {
+    width: 96%;
+    height: 600px;
+    margin: 10px;
+    padding: 10px;
+    border: solid 1px;
+    border-color: gray;
+    border-radius: 10px;
+}
